--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@aws-sdk/credential-providers": "^3.787.0",
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.15",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.77.2",
