Adjust vercel functions runtime pattern

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/**/*": {
+    "api/**/*.{js,ts}": {
       "runtime": "nodejs20.x"
-    },
-    "middleware": {
-      "runtime": "edge"
     }
   }
 }
