--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sharp": "^0.34.5",
     "supabase": "^2.20.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "xlsx": "^0.18.5"
   }
 }
